# FedHarv

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  FedHarv-1.0.0.py  FedHarv-1.0.1.py  LICENSE  README.FedHarv.md  README.Zotero_Processor.md  README.md  USER_GUIDE.md  __init__.py  config.example.FedHarv.ini  config.py  license  metadata_requirements.csv  process_zotero_pdfs.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_harvester.py  utils.py
.github/workflows/: ci.yml
FedHarv/: README.FedHarv.md  metadata_requirements.csv
docs/: README.FedHarv.md
fedharv/: __init__.py  api.py  config.py  core.py  export.py  pdf.py  utils.py
src/: config.example.FedHarv.ini  config.ini  run_harvester.py
src/fedharv/: api.py  config.py  core.py  export.py  pdf.py
tests/: conftest.py  test_api_client.py  test_cache.py  test_core_run.py  test_export.py  test_pdf.py  test_smoke.py  test_utils.py
